# njupt-search

./: .gitignore  AGENTS.md  README.md  eslint.config.js  file_list.txt  index.html  package-lock.json  package.json  pyproject.toml  requirements.txt  tsconfig.app.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
.github/workflows/: auto-update.yml  build-apk.yml  ci.yml  deploy-web.yml  deploy.yml  release-android.yml  update-collection-index.yml  update-exam-data.yml  validate-generated-artifacts.yml
android/: twa-manifest.json
android/app/: build.gradle
apps/web/: README.md  index.html  package.json  tsconfig.json  vite.config.ts
cache/: search_llm_cache.json
config/: github_search_sources.json  query_routes.json
config/collections/: njupt-public.sitegraph.json
docs/: njupt-search-product-roadmap.md
docs/adr/: 0001-keep-three-repository-ecosystem-boundary.md  0002-use-product-repo-monorepo-layout.md  0005-use-collection-not-single-site-as-product-abstraction.md  0007-browser-acceptance-is-required.md  0008-cloud-ci-is-required-for-final-acceptance.md  0009-terminal-generated-layout-only.md
eval/: queries.json  search_cases.json
public/: CNAME
scripts/: fetch_github_repos.py  indexer_config.py  indexer_scoring.py  test_llm_batching.py  update_search_index.py
src/: App.tsx  constants.ts  index.css
tests/: test_sitegraph_binary_index.py  test_sitegraph_cache_benchmark.py  test_sitegraph_contract.py  test_sitegraph_documents.py  test_sitegraph_lower_bound_report.py  test_sitegraph_source_contract.py  test_workflows.py
(+176 files in other folders)
