[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "njupt-search-tools"
version = "2.2.1"
description = "Deterministic build, exam, evaluation, and quality-gate tools for njupt-search."
requires-python = ">=3.10"
dependencies = [
  "beautifulsoup4==4.12.3",
  "openpyxl==3.1.2",
  "pandas==2.2.0",
  "pydantic==2.10.0",
  "requests==2.31.0",
]

[project.optional-dependencies]
test = [
  "pytest==9.0.3",
]
browser = [
  "playwright==1.49.1",
]

[tool.setuptools.packages.find]
where = [
  "tools/collection-indexer/src",
  "tools/exam-pipeline/src",
  "tools/search-eval/src",
]
include = [
  "njupt_search_indexer*",
  "njupt_exam_pipeline*",
  "njupt_search_eval*",
]
